fix some intitialization bugs