@@ -26,7 +26,7 @@ public class StraightLineHandler implements DrawableHandler {
                 Point second= ((PenStep)step.getStep(1)).getPoint();
                 AlgorithmParameters parameters = new PointShapeParameters(first, second);
                 canvas.getLayer2DMoveable().cleanLayer();
-                Thread.ofVirtual().start(()-> ((StraightLineAlgorithm) lineAlgorithm).draw(canvas.getLayer2D(), parameters,mode.getMode()));
+                new Thread(()-> ((StraightLineAlgorithm) lineAlgorithm).draw(canvas.getLayer2D(), parameters,mode.getMode())).start();
                 addToLayer(canvas.getLayer2D(),tool,parameters,mouseEvent);
                 step.clean();
             }
@@ -41,7 +41,7 @@ public class StraightLineHandler implements DrawableHandler {
                 canvas.getLayer2DMoveable().cleanLayer();
                 Point first= ((PenStep)step.getStep(0)).getPoint();
                 AlgorithmParameters parameters = new PointShapeParameters(first, new Point(mouseEvent.getX(), mouseEvent.getY()));
-                Thread.ofVirtual().start(()-> ((StraightLineAlgorithm) lineAlgorithm).draw(canvas.getLayer2DMoveable(), parameters,new Regular()));
+                new Thread(()-> ((StraightLineAlgorithm) lineAlgorithm).draw(canvas.getLayer2DMoveable(), parameters,new Regular())).start();
 
             }
         }
