@@ -33,7 +33,7 @@ public class Curve2PointsHandler implements DrawableHandler {
 
             canvas.getLayer2DMoveable().cleanLayer();
 
-            Thread.ofVirtual().start(() -> ((Drawable) tool.getTool()).draw(canvas.getLayer2D(), parameters, mode.getMode()));
+            new Thread(() -> ((Drawable) tool.getTool()).draw(canvas.getLayer2D(), parameters, mode.getMode())).start();
             addToLayer(canvas.getLayer2D(),tool,parameters,mouseEvent);
             multiStep.clean();
         }
@@ -51,7 +51,7 @@ public class Curve2PointsHandler implements DrawableHandler {
             MultiStep copy = multiStep.copy();
             copy.setStep(new PenStep(x, y));
             AlgorithmParameters parameters = new PointShapeParameters(copy);
-            Thread.ofVirtual().start(() -> ((Drawable) tool.getTool()).draw(canvas.getLayer2DMoveable(), parameters, new Regular()));
+            new Thread(() -> ((Drawable) tool.getTool()).draw(canvas.getLayer2DMoveable(), parameters, new Regular())).start();
         }
     }
 
