@@ -30,7 +30,7 @@ public class CurveHyperbolaHandler implements DrawableHandler {
 
             canvas.getLayer2DMoveable().cleanLayer();
 
-            Thread.ofVirtual().start(() -> ((Drawable) tool.getTool()).draw(canvas.getLayer2D(), parameters, mode.getMode()));
+            new Thread(() -> ((Drawable) tool.getTool()).draw(canvas.getLayer2D(), parameters, mode.getMode())).start();
             addToLayer(canvas.getLayer2D(),tool,parameters,mouseEvent);
             multiStep.clean();
         }
@@ -56,10 +56,10 @@ public class CurveHyperbolaHandler implements DrawableHandler {
             copy.setStep(new PenStep(x, fakeB_Y));
 
             AlgorithmParameters parameters = new PointShapeParameters(copy);
-            Thread.ofVirtual().start(() ->
+            new Thread(() ->
                     ((Drawable) tool.getTool())
                             .draw(canvas.getLayer2DMoveable(), parameters, new Regular())
-            );
+            ).start();
         }
         else if (multiStep.getStep(0).isReady() && multiStep.getStep(1).isReady()) {
             canvas.getLayer2DMoveable().cleanLayer();
@@ -68,10 +68,10 @@ public class CurveHyperbolaHandler implements DrawableHandler {
             copy.setStep(new PenStep(x, y));
 
             AlgorithmParameters parameters = new PointShapeParameters(copy);
-            Thread.ofVirtual().start(() ->
+            new Thread(() ->
                     ((Drawable) tool.getTool())
                             .draw(canvas.getLayer2DMoveable(), parameters, new Regular())
-            );
+            ).start();
         }
     }
 
